Fri Nov 08 17:55 2013 CDT
    * lib/get-info.js: Strip "ip" and "expire" fields from Google Drive
      flashvars

Thu Nov 07 17:18 2013 CDT
    * lib/channel.js, lib/get-info.js, lib/media.js, lib/playlist.js,
      www/assets/js/player.js, www/assets/js/util.js:
      Add ability to embed Google Docs videos with synchronization

Wed Nov 06 17:42 2013 CDT
    * lib/server.js: Fix getChannel to properly handle case insensitive
      channel names

Tue Nov 05 22:43 2013 CDT
    * lib/channel.js: Set user.channel = null in userLeave to prevent
      double execution of userLeave.

Tue Nov 05 22:38 2013 CDT
    * lib/database.js: Add a check for registrations-in-progress to prevent
      duplicate queries by an impatient user
    * www/assets/js/account.js: Disable the registration button while the
      registration is being processed

Mon Nov 04 16:15 2013 CDT
    * lib/xss.js, tests/xss.js: Merge work-in-progress XSS filter
      from xss branch
    * lib/torblocker.js: Allow blocking of socket connections from
      Tor IPs

Thu Oct 31 18:10 2013 CDT
    * package.json: Require node-validator < 2.0.0 as a temporary
      measure while in-house XSS filtering is developed.

Wed Oct 30 19:28 2013 CDT
    * www/assets/js/util.js: Fix mod permission check breaking chat box
      in chat only mode

Mon Oct 20 21:48 2013 CDT
    * www/channel.html: Fix padding for channel.html on small screens

Thu Oct 24 17:29 2013 CDT
    * www/assets/js/player.js: Add a special of special checks for
      dailymotion because their player can only seek to the nearest
      2 seconds

Tue Oct 22 13:41 2013 CDT
    * lib/channel.js: Fix a channel dead race condition

Sun Oct 20 20:02 2013 CDT
    * lib/channel.js: Fix MOTD XSS filter stripping style tags

Sat Oct 19 12:20 2013 CDT
    * lib/channel.js: Remove some unnecessary packets

Wed Oct 16 23:29 2013 CDT
    * www/assets/js/callbacks.js, www/channel.html,
      www/assets/css/ytsync.css: Make queuefail errors always show in