@@ -2201,6 +2201,19 @@ Channel.prototype.tryChat = function(user, data) {
         return;
     }
 
+    if (this.mutedUsers.contains("[shadow]" + user.name.toLowerCase())) {
+        msg = sanitize(msg).escape();
+        msg = this.filterMessage(msg);
+        var msgobj = {
+            username: user.name,
+            msg: msg,
+            msgclass: "",
+            time: Date.now()
+        };
+        user.socket.emit("chatMsg", msgobj);
+        return;
+    }
+
     this.chainMessage(user, msg);
 }
 
