@@ -1,3 +1,7 @@
+Fri Nov 08 20:44 2013 CDT
+    * lib/channel.js, lib/chatcommand.js: Implement basic shadow mute
+      command
+
 Fri Nov 08 17:55 2013 CDT
     * lib/get-info.js: Strip "ip" and "expire" fields from Google Drive
       flashvars
